fix a bunch of breakage and deprecation